Fixing some z-index issues with the new case study page nav

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -3,7 +3,7 @@
 .site-header {
   top: 0;
   left: 0;
-  z-index: 4;
+  z-index: 20;
   width: 100%;
   position: fixed;
   padding: 21px 25px;
