--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  z-index: 5;
+  z-index: 30;
   width: 300px;
   right: -300px;
   overflow: auto;
